# Rust_Tong-hop-excel

./: .gitignore  CHANGELOG.md  README.md  SPEC_Consolidation_V2.md  generate_test_data.py
.brain/: brain.json  session.json
docs/: PROJECT_REVIEW_260408.md
docs/troubleshoot/: log.md
excel-ui/: CHANGELOG.md  README.md  build_log.txt  index.html  package-lock.json  package.json
excel-ui/.brain/: brain.json  session.json
excel-ui/.brain/brainstorm/implementation_logs/: 2026-04-07_Excel_Parser_Fix.md
excel-ui/docs/troubleshoot/: log.md
excel-ui/src/: api.ts  main.ts  state.ts  styles.css  ui.ts
excel-ui/src-tauri/: Cargo.toml  tauri.conf.json
excel-ui/src-tauri/capabilities/: default.json
excel-ui/src-tauri/icons/: icon.icns
excel-ui/src-tauri/src/: main.rs
excel-ui/src-tauri/src/aggregator/: mod.rs
excel-ui/src-tauri/src/app/: state.rs  ui.rs
excel-ui/src-tauri/src/cache/: schema.rs  sqlite.rs
excel-ui/src-tauri/src/domain/: models.rs  normalization.rs
excel-ui/src-tauri/src/parser/: mod.rs
excel-ui/src-tauri/src/pipeline/: messages.rs  mod.rs  supervisor.rs
excel-ui/src-tauri/src/scanner/: mod.rs
excel-ui/src-tauri/src/writer/: mod.rs
