[package]
name = "excel-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "excel_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
calamine = "0.34"
chrono = "0.4"
crossbeam-channel = "0.5"
dashmap = "6"
env_logger = "0.11"
log = "0.4"
rayon = "1.11"
rusqlite = { version = "0.39", features = ["bundled"] }
rust_xlsxwriter = "0.94"
unicode-normalization = "0.1"
regex = "1"
rand = "0.8"
tauri-plugin-dialog = "2"

